--- a/overmij.html
+++ b/overmij.html
@@ -52,7 +52,7 @@ crossorigin="anonymous">
 <div class="container">
   <div class="row">
     <div class="col-md-8"></br></br><h3>Over mij</h3></div>
-    <p>Ik ben Anne Veeman, bijna zestig, vader van twee zonen, en ik woon deels in Bussum en deels aan boord van mijn kleine bootje. Ik ben nu bezig een groter schip te kopen en daar permanent op te gaan wonen en werken. Mijn hele leven ben ik al op het water te vinden, dus waarom er niet op gaan wonen. Een nieuwe uitdaging staat mij dus te wachten. </p>
+    <p>Ik ben Anne Veeman, bijna zestig, vader van twee zonen, en ik woon deels in Bussum en deels aan boord van mijn kleine bootje. Ik ben nu bezig een groter schip te kopen om daar permanent op te gaan wonen en werken. Mijn hele leven ben ik al op het water te vinden, dus waarom er niet op gaan wonen. Een nieuwe uitdaging staat mij dus te wachten. </p>
 <div class="col-md-8"></br></br><h3>Werkervaring</h3></div>
 <p>Momenteel werk ik als zzp'er voor een twintigtal klanten en beheer en onderhoud hun website cq server. Daarnaast beheer ik een server met een zestal webshops voor een grote verlichtingswinkel in Amsterdam. Voor dit bedrijf werk ik al meer dan 35 jaar, ooit begonnen als verkoper, daarna als bedrijfsleider in vier verschillende winkels en nu verzorg ik al vele jaren de digitale winkelomgeving.
 
