--- a/contact.html
+++ b/contact.html
@@ -40,10 +40,10 @@ crossorigin="anonymous">
     <a class="nav-link active" href="index.html">Home</a>
     </li>
     <li class="nav-item">
-    <a class="nav-link" active" aria-current="page" href="overmij.html">Over mij</a>
+    <a class="nav-link active"  href="overmij.html">Over mij</a>
     </li>
     <li class="nav-item">
-    <a class="nav-link" active" aria-current="page" href="#">Contact</a>
+    <a class="nav-link active" aria-current="page" href="#">Contact</a>
     </li>
     </ul>
     </div>
