--- a/overmij.html
+++ b/overmij.html
@@ -51,13 +51,13 @@ crossorigin="anonymous">
     </nav>
 <div class="container">
   <div class="row">
-    <div class="col-md-8"></br></br><h3>Over mij</h3></div>
+    <div class="col-md-8"><br><br><h3>Over mij</h3></div>
     <p>Ik ben Anne Veeman, bijna zestig, vader van twee zonen, en ik woon deels in Bussum en deels aan boord van mijn kleine bootje. Ik ben nu bezig een groter schip te kopen om daar permanent op te gaan wonen en werken. Mijn hele leven ben ik al op het water te vinden, dus waarom er niet op gaan wonen. Een nieuwe uitdaging staat mij dus te wachten. </p>
-<div class="col-md-8"></br></br><h3>Werkervaring</h3></div>
+<div class="col-md-8"><br><br><h3>Werkervaring</h3></div>
 <p>Momenteel werk ik als zzp'er voor een twintigtal klanten en beheer en onderhoud hun website cq server. Daarnaast beheer ik een server met een zestal webshops voor een grote verlichtingswinkel in Amsterdam. Voor dit bedrijf werk ik al meer dan 35 jaar, ooit begonnen als verkoper, daarna als bedrijfsleider in vier verschillende winkels en nu verzorg ik al vele jaren de digitale winkelomgeving.
 
   Vroeger heb ik gevaren als stuurman op diverse schepen en ik heb samen met anderen veel zeilschepen weggebracht naar andere oorden of juist weer opgehaald naar Nederland. De laatste jaren vaar ik eigenlijk alleen nog in eigen land en dan vooral op de Waddenzee en in Friesland. En dat hoop ik nog lang vol te houden...</p>
-  <div class="col-md-8"></br></br><h3>Hobby's</h3></div>
+  <div class="col-md-8"><br><br><h3>Hobby's</h3></div>
 <p>Varen is mijn grootste hobby en dan alles wat er mee te maken heeft. Vooral de techniek aan boord vind ik leuk. Ik knutsel veel met 'single board computers' zoals de arduino en raspberry pi. Ik ben zendamateur en bouw mijn eigen antennes. En ik herstel oude digitale fotocamera's om er daarna mee te fotograferen.</p>
   
       </div>
@@ -66,7 +66,7 @@ crossorigin="anonymous">
 <footer>
 <div id="footer" class="footer-overmij">
   <div class="container text-center">
-    <p class="tekst-footer"><br><br>Alle tekst  &copy;: Anne Veeman</br>
+    <p class="tekst-footer"><br><br>Alle tekst  &copy;: Anne Veeman<br>
    </p>
   </div>
 </div>
