--- a/contact.html
+++ b/contact.html
@@ -51,25 +51,25 @@ crossorigin="anonymous">
     </nav>
 <div class="container">
   <div class="row">
-    <div class="col-md-12"></br></br><h3>Stuur een bericht aan mij</h3></div>
+    <div class="col-md-12"><br><br><h3>Stuur een bericht aan mij</h3></div>
     <form action="https://formspree.io/f/xwkzgqkn" method="POST">
       <div class="form-group">
 
         <div class="row">
           <div class="col">
-            <label class="form-label" for="Voornaam">Voornaam</label>
-            <input type="text" name="Naam" class="form-control" placeholder="Voornaam">
+            <label class="form-label" for="voornaam">Voornaam</label>
+            <input type="text" name="naam" class="form-control" id="voornaam" placeholder="Voornaam">
           <br>
-          <label class="form-label" for="Achternaam">Achternaam</label>
-            <input type="text" name="Achternaam" class="form-control" placeholder="Achternaam">
+          <label class="form-label" for="achternaam">Achternaam</label>
+            <input type="text" name="achternaam" class="form-control" id="achternaam" placeholder="Achternaam">
           <br>
-        <label class="form-label" for="emailadres">Uw email adres</label>
-        <input type="email" class="form-control" name="email" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Voer uw emailadres in">
+        <label class="form-label" for="email">Uw email adres</label>
+        <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" placeholder="Voer uw emailadres in">
         <small id="emailHelp" class="form-text text-muted">Ik deel uw emailadres nooit met anderen</small>
       <br><br>
      
-        <label class="form-label" for="Uw bericht">Uw bericht</label>
-        <input type="text" class="form-control" name="message" id="message" max-length="800" style="height: 150px;" placeholder="Uw bericht">
+        <label class="form-label" for="message">Uw bericht</label>
+        <input type="text" class="form-control" name="message" id="message" maxlength="800" style="height: 150px;" placeholder="Uw bericht">
       <br>
       <button type="submit" class="btn btn-primary">Verstuur</button>
       </div></div></div>
